# MyDemoForAI

./: .gitignore  README.md  package-lock.json  pyproject.toml
crewai_demo/: handcraft_crew.py  real_crew.py
docker-demo/: Dockerfile  app.py
function_calling_demo/: fc_demo.py  tool_router.py
langchain_demo/: agent_demo.py  chain_demo.py  langgraph_demo.py
mcp_demo/: mcp_client.py  mcp_server.py
memory_demo/: __init__.py  custom_memory.py  run_demo.py
milvus_demo/: docker-compose.yml  milvus_demo.py
rag_demo/: config.example.py  peek.py  rag_demo.py
skill_demo/: skill_demo.py
