[project]
name = "agentproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "requests>=2.34.2",
]
